# Proyecto-1-Datos-II-C

./: .gitignore  README.md
Doxygen/html/: _char_8h_source.html  _client_8h_source.html  _client_manager_8h_source.html  annotated.html  (+328 more)
Editor/Model/: CMakeLists.txt  main.cpp
Editor/Model/src/Types/: Constants.h  Type.h
Editor/Model/src/Types/Char/: Char.cpp  Char.h
Editor/Model/src/Types/Double/: Double.cpp  Double.h
Editor/Model/src/Types/Float/: Float.cpp  Float.h
Editor/Model/src/Types/Int/: Integer.cpp  Integer.h
Editor/Model/src/Types/Long/: Long.cpp  Long.h
Editor/Model/src/Types/Reference/: Reference.cpp  Reference.h
Editor/Model/src/Types/Struct/: Struct.cpp  Struct.h
Editor/Model/src/Util/: Json.h
Model/: CMakeLists.txt  main.cpp
Model/src/: Constants.h  main.cpp
Model/src/Compiler/: Compiler.cpp  Compiler.h
Model/src/Data Structures/: SimplyLinkedList.h
Model/src/Types/: Constants.h  GenericType.h  Type.h
Model/src/Types/Char/: Char.cpp  Char.h
Model/src/Types/Double/: Double.cpp  Double.h
Model/src/Types/Float/: Float.cpp  Float.h
Model/src/Types/Int/: Integer.cpp  Integer.h
Model/src/Types/Long/: Long.cpp  Long.h
Model/src/Types/Reference/: Reference.cpp  Reference.h
Model/src/Util/: Json.h  Message.h
Model/src/Util/Coms/: Message.h
Model/src/Util/Messages/: CreateMessage.h  GenericMessage.h  ModifyMessage.h  SearchMessage.h
QT_Interface/: CMakeLists.txt  interface.cpp  interface.h  interface.ui
QT_Proyecto/: mainwindow.ui
View/: CMakeLists.txt  Doxyfile  interface.cpp  interface.h  interface.ui  main.cpp
(+149 files in other folders)
